syntax = "proto3";

package cart;

option go_package = "/cart";

import "common.proto";

message AddItemReq {
   uint32 user_id = 1;
   common.ProductItem item = 2;
}

message AddItemResp {}

message GetCartReq {
   uint32 user_id = 1;
}

message GetCartResp {
   repeated common.ProductItem items = 1;
}

message EmptyCartReq {
   uint32 user_id = 1;
}

message EmptyCartResp {}

service CartService {
   rpc AddItem (AddItemReq) returns (AddItemResp) {}
   rpc GetCart (GetCartReq) returns (GetCartResp) {}
   rpc EmptyCart (EmptyCartReq) returns (EmptyCartResp) {}
}

