syntax = "proto3";

package checkout;

option go_package = "/checkout";

import "payment.proto";
import "common.proto";

message CheckoutReq {
   uint32 user_id = 1;
   string firstname = 2;
   string lastname = 3;
   string email = 4;
   common.Address address = 5;
   payment.CreditCardInfo credit_card = 6;
}

message CheckoutResp {
   string order_id = 1;
   string transaction_id = 2;
}

service CheckoutService {
   rpc Checkout (CheckoutReq) returns (CheckoutResp) {}
}

