syntax = "proto3";

package common;

option go_package = "common";

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  string zip = 5;
}

message ProductItem {
  uint32 product_id = 1;
  uint32 quantity = 2;
}