syntax = "proto3";

package order;

option go_package = "/order";

import "common.proto";

message OrderItem {
  common.ProductItem item = 1;
  float cost = 2;
}

message OrderResult {
  string order_id = 1;
}

message Order {
  repeated OrderItem items = 1;
  uint32 user_id = 2;
  string order_id = 3;
  string user_currency = 4;
  common.Address address = 5;
  string email = 6;
  int32 created_at = 7;
}


message PlaceOrderReq {
  uint32 user_id = 1;
  string user_currency = 2;
  common.Address address = 3;
  string email = 4;

  repeated OrderItem items = 5;
}

message PlaceOrderResp {
  OrderResult order = 1;
}

message ListOrderReq {
  uint32 user_id = 1;
}

message ListOrderResp {
  repeated Order orders = 1;
}

service OrderService {
  rpc PlaceOrder (PlaceOrderReq) returns (PlaceOrderResp) {}
  rpc ListOrder (ListOrderReq) returns (ListOrderResp) {}
}

